2003-07-18  Don Porter  <dgp@users.sourceforge.net>

	* doc/AddErrInfo.3:	Improved consistency of documentation
	* doc/CrtTrace.3:      	by using "null" everywhere to refer to
	* doc/Encoding.3:      	the character '\0', and using "NULL"
	* doc/Eval.3:          	everywhere to refer to the value of a
	* doc/GetIndex.3:      	pointer that points to nowhere.
	* doc/Hash.3:          	Also dropped references to ASCII that
	* doc/LinkVar.3:       	are no longer true, and standardized on
	* doc/Macintosh.3:     	the hyphenated spelling of "null-terminated".
	* doc/OpenFileChnl.3:   	
	* doc/SetVar.3:         	
	* doc/StringObj.3:      	
	* doc/Utf.3:            	

	* doc/CrtSlave.3 (Tcl_MakeSafe):  Removed warning about possible
	deprecation (no TIP on that).

2003-07-17  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tclUnixFCmd.c: fix for compilation errors on platforms where
	configure detects non-functional chflags(). [Bug 748946]

	* macosx/Makefile: Rewrote buildsystem for Mac OS X framework build
	to be purely make driven; in order to become independent of Apple's
	closed-source IDE and build tool. The changes are intended to be
	transparent to the Makefile user, all existing make targets and
	cmd line variable overrides should continue to work.
	Changed build to only include tcl specific html help in Tcl.framework,
	the tk specific html help is now included in Tk.framework.
	Added var to allow overriding of tclsh used during html help 
	building (Landon Fuller).

	* macosx/Tcl.pbproj/project.pbxproj:
	* macosx/Tcl.pbproj/jingham.pbxuser: Changed to purely call through
	to the make driven buildsystem; Tcl.framework is no longer assembled
	by ProjectBuilder.
	Set default SYMROOT in target options to simplify setting up PB
	(manually setting common build folder for tcl & tk no longer needed).

	* tools/tcltk-man2html.tcl: Added options to allow building only the
	tcl or tk html help files; the default behaviour with none of the new